--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
+    "@mui/styled-engine": "^6.1.5",
     "react-router-dom": "^6.27.0"
   }
 }
